@@ -76,7 +76,7 @@ public final class FXAction implements IAction<Event, Object> {
 	}
 
 	@Override
-	public Object getLastMessage() {
+	public Object getMessage() {
 		return this.message;
 	}
 
@@ -86,7 +86,7 @@ public final class FXAction implements IAction<Event, Object> {
 	}
 
 	@Override
-	public Event getActionEvent() {
+	public Event getSourceEvent() {
 		return this.event;
 	}
 
@@ -99,5 +99,18 @@ public final class FXAction implements IAction<Event, Object> {
 	public String getTargetId() {
 		return this.target;
 	}
+
+    @Override
+    public <T> boolean isMessageTypeOf(final Class<T> clazz) {
+        return clazz.isAssignableFrom(this.message.getClass());
+    }
+    @Override
+    public <T> T getTypedMessage(final Class<T> clazz) {
+        return clazz.cast(this.message);
+    }
+    @Override
+    public boolean messageEquals(Object object) {
+        return object.equals(this.message);
+    }
 
 }
